# bat

./: README.md  meson.build
include/: bat.h  battery.h  buffer.h  config.h  event-loop.h  output.h  render.h  string-list.h  udev.h  wayland.h
protocol/: meson.build
src/: battery.c  buffer.c  config.c  event-loop.c  main.c  output.c  render.c  string-list.c  udev.c  wayland.c
